--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Reading List App</title>
+    <script src="js/app.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   </head>
   <body>
@@ -30,7 +31,8 @@
       </div>
       <input type="submit" value="save"/>
     </form>
-
+<br>
+<input id="delete" type="button" value="delete"/>
     <h1>Reading List</h1>
     <div id="reading-list"></div>
   </body>
